Fixed wrong margins

--- a/styles/style.css
+++ b/styles/style.css
@@ -266,6 +266,7 @@
 }
 
 .section__article-title {
+  font-size: 18px;
   margin-block-end: 20px;
 } 
 
@@ -278,7 +279,11 @@
   color: var(--secondary-color);
 }
 
-.section__subarticle:last-child .section__text-content:last-child {
+.section__article > .section__text-content:last-child {
+  margin-block-end: 0;
+}
+
+.section__subarticle:last-child > .section__text-content:last-child {
   margin-block-end: 0;
 }
 
@@ -371,6 +376,7 @@
 
 @media (min-width: 768px) {
   .footer__title {
+    margin-inline-start: 10px;
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
 }
